--- a/src/components/_text.scss
+++ b/src/components/_text.scss
@@ -2,26 +2,25 @@
 //
 // @group Components
 .txt {
+	// Root
 	&,
-	:not([class*="-txtWr"]) {
+	> * {
+		&:not(.flx):not(.flxInline):not(.grd):not([class*="-txtAlignF"]) {
+			display: inline-block;
+		}
+	}
+
+	&:not([class*="-txtWr"]) {
 		white-space: normal;
 	}
 	&:not([class*="-txtCo"]) {
 		color: color(dark, 0.7);
 	}
-	&:not([class*="-flx"]):not(.grd):not([class*="-txtAlignF"]) {
-		// Flx
-		display: block;
-	}
 	&:not([class*="-txtA"]) {
-		// Align
 		&,
-		:not([class*="-txtA"]) {
+		*:not([class*="-txtA"]) {
+			// Txt Align
 			text-align: left;
-		}
-		> *:not([class*="-flx"]):not(.grd):not([class*="-txtAlignF"]) {
-			// Gaping
-			display: inline-block;
 		}
 	}
 	&:not([class*="-maxW"]) {
@@ -33,22 +32,20 @@
 		margin-bottom: 1rem;
 	}
 
+	// Childs
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+	p {
+		line-height: $lineHeightBig;
+	}
+
 	// Text block component
 	//
 	// @group Components
 	&.--box,
 	&.--miniBox {
 		padding: 0.5rem 1rem;
-	}
-
-	img {
-		max-width: 100%;
-		height: auto;
-	}
-	hr {
-		display: inline-block;
-	}
-	p {
-		line-height: $lineHeightBig;
 	}
 }
